--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             </div>
             <div class="last-buttons">
-                <div> <button class="btn6 "> Go Back</button></div>
+                <div> <button class="btn6 hide"> Go Back</button></div>
 
                 <div> <button class="btn5 "> Next Step</button></div>
             </div>
